# analisis-multivariable-dedatos

./: .gitignore  README.md  index.html  pyproject.toml
.specify/memory/: constitution.md
assets/: index-BrMOB4xi.js  index-CSgToXAH.css
data/: anova.json  clusters.json  pca.json  regression.json  summary.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  translations.js
frontend/src/components/: Dashboard.jsx  KPICards.jsx  Navbar.jsx  SurveyInfoBar.jsx
src/: analysis.py
